[package]
name = "zlogz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
log = "0.4.21"
simple-home-dir = "0.3.4"
simple_logger = "5.0.0"
time = {version = "0.3.36", features =["local-offset"]}
